--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,13 +1,10 @@
-<mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
-xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout"
-	xmlns:f="sap.ui.layout.form" 
-	controllerName="opensap.myapp.controller.App">
+<mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form" controllerName="opensap.myapp.controller.App">
 	<App>
 		<pages>
 			<Page title="openSAP - Developing with SAPUI5">
 				<content>
-					<IconTabBar id="idTopLevelIconTabBar"
-					class="sapUiResponsiveContentPadding">
+					<IconTabBar id="idTopLevelIconTabBar" selectedKey="db" class="sapUiResponsiveContentPadding">
 						<items>
 							<IconTabFilter id="start" text="{i18n>gettingStartedFilter}">
 								<Carousel>
@@ -47,12 +44,22 @@ xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout"
 								</f:SimpleForm>
 								<Toolbar>
 									<ToolbarSpacer/>
-									<Button text="{i18n>layoutPublishButton}"
-									icon="sap-icon://outbox"
-									type="Accept"/>
-									<Button text="{i18n>layoutDraftButton}"
-									icon="sap-icon://save" />
+									<Button text="{i18n>layoutPublishButton}" icon="sap-icon://outbox" type="Accept"/>
+									<Button text="{i18n>layoutDraftButton}" icon="sap-icon://save"/>
 								</Toolbar>
+							</IconTabFilter>
+							<IconTabFilter text="{i18n>dataBindingFilter}" key="db">
+								<content>
+									<List headerText="{i18n>productListTitle}" items="{/ProductSet}"> 
+								
+										<items>
+										
+											<ObjectListItem title="{Name}" number="{Price}" 
+											intro="{ProductID}" numberUnit="{CurrencyCode}"
+											/>
+										</items>
+									</List>
+								</content>
 							</IconTabFilter>
 						</items>
 					</IconTabBar>
