--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -16,7 +16,9 @@
 									</pages>
 								</Carousel>
 								<Button text="{i18n>showHelloButtonText}" press="onShowHello"/>
-								<Input value="{helloPanel>/recipient/name}" description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="true" width="60%"/>
+								<Input
+									value="{path: 'helloPanel>/recipient/amount', type: 'sap.ui.model.type.Float', formatOptions: {minFractionDigits: 2}, constraints: {maximum : 3000} }"
+									description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="false" width="60%"/>
 							</IconTabFilter>
 							<IconTabFilter id="layouts" text="{i18n>layoutFilter}">
 								<MessageStrip type="Information" showIcon="true" text="Here's a Form Layout inside an Icon Tab Bar …"/>
@@ -50,13 +52,17 @@
 							</IconTabFilter>
 							<IconTabFilter text="{i18n>dataBindingFilter}" key="db">
 								<content>
-									<List headerText="{i18n>productListTitle}" items="{/ProductSet}"> 
-								
+									<!--сортировка по цене-->
+									<List headerText="{i18n>productListTitle}" items="{path: '/ProductSet', sorter: { path: 'Price'}}">
 										<items>
-										
-											<ObjectListItem title="{Name}" number="{Price}" 
-											intro="{ProductID}" numberUnit="{CurrencyCode}"
-											/>
+											<ObjectListItem title="{Name}"
+												number="{parts: [ {path: 'Price'}, {path: 'CurrencyCode'} ], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
+												numberState="{= ${Price} > 500 ? 'Error' : 'Success'}" intro="{ProductID}" numberUnit="{CurrencyCode}">
+												<firstStatus>
+													<ObjectStatus text="{ parts: [ {path: 'WeightUnit'}, {path: 'WeightMeasure'} ], formatter : '.formatter.delivery' }"/>
+													<!--. means we search for formatter in the controller-->
+												</firstStatus>
+											</ObjectListItem>
 										</items>
 									</List>
 								</content>
