--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -53,25 +53,38 @@
 							<IconTabFilter text="{i18n>dataBindingFilter}" key="db">
 								<content>
 									<!--сортировка по цене-->
-									<List id="productsList" items="{path : '/ProductSet', sorter : { path : 'Category', group : true } }">
+									<List id="productsList" growing="true" growingThreshold="5" growingScrollToLoad="false"
+										items="{path : '/ProductSet', sorter : { path : 'Category', group : true }, parameters : {expand: 'ToSupplier'} }">
 										<headerToolbar>
 											<Toolbar>
 												<Title text="{i18n>productListTitle}"/>
 												<ToolbarSpacer/>
+												<Button icon="sap-icon://sort" press="onSortPrice"/>
 												<SearchField width="50%" search="onFilterProducts"/>
 											</Toolbar>
 										</headerToolbar>
 										<items>
 											<ObjectListItem title="{Name}"
 												number="{parts: [ {path: 'Price'}, {path: 'CurrencyCode'} ], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
-												numberState="{= ${Price} > 500 ? 'Error' : 'Success'}" intro="{ProductID}" numberUnit="{CurrencyCode}">
+												numberState="{= ${Price} > 500 ? 'Error' : 'Success'}" press="onItemSelected" type="Active" intro="{ProductID}" numberUnit="{CurrencyCode}">
 												<firstStatus>
 													<ObjectStatus text="{ parts: [ {path: 'WeightUnit'}, {path: 'WeightMeasure'} ], formatter : '.formatter.delivery' }"/>
 													<!--. means we search for formatter in the controller-->
 												</firstStatus>
+												<secondStatus>
+													<ObjectStatus title="{i18n>statusDeliveryFrom}" text="{ToSupplier/Address/City}"/>
+												</secondStatus>
 											</ObjectListItem>
 										</items>
 									</List>
+									<Panel expandable="true" expanded="true" id="productDetailsPanel" headerText="{i18n>productDetailPanelHeader}" visible="false">
+										<l:Grid>
+											<Text text="{i18n>productDetailPanelID}: {ProductID}"/>
+											<Text text="{i18n>productDetailPanelName}: {Name}"/>
+											<Text text="{i18n>productDetailPanelDescription}: &#13;{Description}"/>
+											<Text text="{i18n>productDetailPanelPrice}: {Price}"/>
+										</l:Grid>
+									</Panel>
 								</content>
 							</IconTabFilter>
 						</items>
